AMQCPP-205

Fixing warnings found on windows build

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@713582 13f79535-47bb-0310-9956-ffa450edef68